igt@i915_selftest@live* - dmesg-warn - failed to set rcs0 head to zero ctl * head * tail * start *
<7> [223.792229] i915 0000:00:02.0: [drm:i915_driver_probe [i915]] device info: has EU power gating: no
<6> [223.792397] i915 0000:00:02.0: [drm] DRM_I915_DEBUG enabled
<6> [223.792399] i915 0000:00:02.0: [drm] DRM_I915_DEBUG_GEM enabled
<6> [223.792401] i915 0000:00:02.0: [drm] DRM_I915_DEBUG_RUNTIME_PM enabled
<6> [223.792404] i915: Performing live selftests with st_random_seed=0x48132cac st_timeout=500
<6> [223.792406] i915: Running hangcheck
<6> [223.792431] i915: Running intel_hangcheck_live_selftests/igt_hang_sanitycheck
<7> [223.819859] i915 0000:00:02.0: [drm:intel_power_well_disable [i915]] disabling display
<7> [223.820168] i915 0000:00:02.0: [drm:intel_power_well_disable [i915]] disabling always-on
<6> [223.821271] i915: Running intel_hangcheck_live_selftests/igt_reset_nop
<7> [223.821576] i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling always-on
<6> [224.323772] igt_reset_nop: 245 resets
<6> [224.340514] i915: Running intel_hangcheck_live_selftests/igt_reset_nop_engine
<3> [224.344272] i915 0000:00:02.0: [drm] *ERROR* failed to set rcs0 head to zero ctl 00000000 head 00001368 tail 00000000 start 7fffa000
<6> [224.841227] igt_reset_nop_engine(rcs0): 1360 resets
<6> [225.342471] igt_reset_nop_engine(bcs0): 1552 resets
<6> [225.843510] igt_reset_nop_engine(vcs0): 1541 resets
<6> [226.344313] igt_reset_nop_engine(vecs0): 1548 resets
<6> [226.344520] i915: Running intel_hangcheck_live_selftests/igt_reset_idle_engine
<6> [226.845257] rcs0: Completed 6953 idle resets
<6> [227.346293] bcs0: Completed 7407 idle resets
<6> [227.847264] vcs0: Completed 7245 idle resets
<6> [228.348285] vecs0: Completed 7422 idle resets
<6> [228.348412] i915: Running intel_hangcheck_live_selftests/igt_reset_active_engine
<6> [228.849261] rcs0: Completed 1577 active resets
<6> [229.350359] bcs0: Completed 2580 active resets
<6> [229.851324] vcs0: Completed 2442 active resets
<6> [230.352383] vecs0: Completed 2650 active resets
<6> [230.377599] i915: Running intel_hangcheck_live_selftests/igt_reset_fail_engine