drm/i915/gt: Increase a time to retry RING_HEAD reset

Issue is seen again where engine resets fails because the engine resumes
from an incorrect RING_HEAD. So, increase a time if at first the
write doesn't succeed and retry again.

Fixes: 6ef0e3ef2662 ("drm/i915/gt: Retry RING_HEAD reset until it get sticks")
Closes: https://gitlab.freedesktop.org/drm/i915/kernel/-/issues/12806
Signed-off-by: Nitin Gote <nitin.r.gote@intel.com>